<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Dialer</string>
    <string name="slot_1">Card 1</string>
    <string name="slot_2">Card 2</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="onHold">On hold</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%d</xliff:g> and <xliff:g id="max_len" >%d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="mobile_network_settings_not_available">Cellular network settings are not available for this user</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_accounts_make_sip_calls_with">Make SIP calls with</string>
    <string name="phone_accounts_ask_every_time">Ask first</string>
    <string name="phone_accounts_settings_header">Call settings</string>
    <string name="phone_accounts_choose_accounts">Choose accounts</string>
    <string name="phone_accounts_selection_header">Phone accounts</string>
    <string name="phone_accounts_add_sip_account">Add SIP account</string>
    <string name="phone_accounts_configure_account_settings">Configure account settings</string>
    <string name="phone_account_wifi_calling">Wi-Fi calling</string>
    <string name="wifi_calling_do_not_use">Do not use Wi-Fi calling</string>
    <string name="wifi_calling_do_not_use_call_assistant">Do not use call assistant</string>
    <string name="wifi_calling_call_assistant_none">None</string>
    <string name="wifi_calling_call_assistant">Call assistant</string>
    <string name="wifi_calling_use_call_assistant">Use call assistant</string>
    <string name="wifi_calling_select_call_assistant">Choose call assistant</string>
    <string name="wifi_calling_select_call_assistant_summary">Manage the networks used for calls with</string>
    <string name="wifi_calling_use_call_assistant_summary">Let apps or services manage networks used for calls</string>
    <string name="wifi_calling_call_assistant_configure">Configure</string>
    <string name="connection_service_default_label">Built-in connection service</string>
    <string name="voicemail">Voicemail settings</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="cell_broadcast_settings">Emergency broadcasts</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">More</string>
    <string name="additional_gsm_call_settings_with_label">Additional settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding</string>
    <string name="call_forwarding_settings_with_label">Call forwarding settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="call_settings_primary_user_only">Call settings can only be changed by the primary user.</string>
    <string name="call_settings_with_label">SIM card settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="fdn_check_failure">Your Phone app\'s Fixed Dialing Numbers setting is turned on. As a result, some call-related features aren\'t working.</string>
    <string name="radio_off_error">Turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string-array name="clir_display_values">
        
        <item>Network default</item>
        
        <item>Hide number</item>
        
        <item>Show number</item>
    </string-array>
    <string-array name="clir_values" translatable="false">
        
        <item><xliff:g>DEFAULT</xliff:g></item>
        
        <item><xliff:g>HIDE</xliff:g></item>
        
        <item><xliff:g>SHOW</xliff:g></item>
    </string-array>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">Couldn\'t change the voicemail number.\nContact your carrier if this problem persists.</string>
    <string name="fw_change_failed">Couldn\'t change the forwarding number.\nContact your carrier if this problem persists.</string>
    <string name="fw_get_in_vm_failed">Couldn\'t retrieve and save current forwarding number settings.\nSwitch to the new provider anyway?</string>
    <string name="no_change">No changes were made.</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="voicemail_default">My carrier</string>
    <string name="mobile_networks">Cellular network settings</string>
    <string name="label_available">Available networks</string>
    <string name="load_networks_progress">Searching\u2026</string>
    <string name="empty_networks_list">No networks found.</string>
    <string name="search_networks">Search networks</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="register_on_network">Registering on <xliff:g id="network">%s</xliff:g>\u2026</string>
    <string name="not_allowed">Your SIM card doesn\'t allow a connection to this network.</string>
    <string name="connect_later">Can\'t connect to this network right now. Try again later.</string>
    <string name="registration_done">Registered on network.</string>
    <string name="sum_carrier_select">Choose a network operator</string>
    <string name="sum_search_networks">Search for all available networks</string>
    <string name="select_automatically">Choose automatically</string>
    <string name="sum_select_automatically">Automatically choose preferred network</string>
    <string name="register_automatically">Automatic registration\u2026</string>
    <string name="preferred_network_mode_title">Preferred network type</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="preferred_network_mode_wcdma_perf_summary">Preferred network mode: WCDMA preferred</string>
    <string name="preferred_network_mode_gsm_only_summary">Preferred network mode: GSM only</string>
    <string name="preferred_network_mode_wcdma_only_summary">Preferred network mode: WCDMA only</string>
    <string name="emergency_call_simlock">Emergency Call</string>
</resources>