<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
     android:title="@string/labelGSMMore">

    <!-- Modified by guofeiyao -->
    <com.android.phone.common.widget.ArrowPreference
        android:key="call_forwarding_key"
        android:title="@string/labelCF"
        android:persistent="false" />

    <!-- M: Add for CallBarring -->
    <com.android.phone.common.widget.ArrowPreference
        android:key="button_cb_expand_key"
        android:title="@string/lable_call_barring" 
        android:persistent="false"
        >
    </com.android.phone.common.widget.ArrowPreference>

    <com.android.phone.common.widget.ArrowPreference
        android:key="additional_gsm_call_settings_key"
        android:title="@string/additional_gsm_call_settings"
        android:persistent="false" />
    <!-- End -->
</PreferenceScreen>
